--- a/contao-projects/composer.json
+++ b/contao-projects/composer.json
@@ -3,11 +3,12 @@
   "description": "Projectsmodul for Contao",
   "keywords": ["contao", "projects"],
   "type": "contao-bundle",
-  "version": "0.14",
+  "version": "0.15",
   "license": "LGPL-3.0-or-later",
   "require": {
     "php": ">=5.6",
-    "contao/core-bundle": "^4.8"
+    "contao/core-bundle": "^4.8",
+    "alpdesk/alpdesk-frontendediting": "^1.0"
   },
   "authors": [
     {
